--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -16,7 +16,11 @@ GSS <-read.csv(file="GSScsv.csv",header=TRUE)
 
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?.  If you skimp in this section expect to be marked down in your grade. Paint a picture of the project a couple of paragraphs is expected!-->
 
-Is belief in the bigbang theory (BIGBANG) independent of belief in an afterlife (POSTLIFE)?
+Is belief in the bigbang theory (BIGBANG) independent of belief in an afterlife (POSTLIFE)?  
+
+$H0$ Null Hypothesis: The bigbang theory is independent of belief in an afterlife.  
+
+$HA$ Alternative Hypothesis: The bigbang theory is not independent of belief in an aferlife.  
 
 # Methods
 
