--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -36,9 +36,19 @@ $HA$ Alternative Hypothesis: The bigbang theory is not independent of belief in 
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
 
+```{r}
+barchartGC(~BIGBANG + POSTLIFE,data=GSS)
+barchartGC(~BIGBANG + POSTLIFE,data=GSS, type="percent")
+
+```
+
+The barchart tells us that people believe that the bigbang theory is not independent of the belief in an afterlife by around 10%.  
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+
 
 ## Inferential Results
 
