--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -18,9 +18,9 @@ GSS <-read.csv(file="GSScsv.csv",header=TRUE)
 
 Is belief in the bigbang theory (BIGBANG) independent of belief in an afterlife (POSTLIFE)?  
 
-$H0$ Null Hypothesis: The bigbang theory is independent of belief in an afterlife.  
+$H0$ Null Hypothesis: There is no relationship between the belief in the bigbang theory and the belief in an afterlife.
 
-$HA$ Alternative Hypothesis: The bigbang theory is not independent of belief in an aferlife.  
+$HA$ Alternative Hypothesis: The bigbang theory is independent of belief in an aferlife.  
 
 # Methods
 
@@ -60,6 +60,13 @@ The numerical results tells us that most people say that people believe that the
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+
+The Inferential results tells us that the P-Value is 0.08006. Meaning people believe that the bigbang theory is independent.  
 
 # Discussion and Conclusion
 
