--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -71,3 +71,7 @@ The Inferential results tells us that the P-Value is 0.08006. Meaning people bel
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+With the P-Value giving us 0.08006, therefore we fail to reject the null hypothesis.   
+We have no evidence to show the correlation between the two, however people believe that they are independent with one another.  
+
